@@ -1,3 +1,8 @@
+2007-05-29 Ian Rutt
+ * Added code to enable the setting of a default path for glint and glide. This
+   code is in glimmer_filenames.F90, and can be accessed with the glimmer_set_path
+   subroutine.
+	
 2007-05-28 Ian Rutt
  * Added use glimmer_config to glide so that configs can be dealt with 
    with only one use statement
